# cppcommon

./: .clang-format  .gitignore  CMakeLists.txt  CppCommonConfig.h.in  README.txt
cmake/: platform.cmake  update_directory.cmake  vs_precompiled.cmake
include/: AutoLock.h  BinaryPacker.h  BinaryUnPacker.h  BitStream.h  CSVReader.h  ComUtils.h  Endianess.h  EventListener.h  IUnknownBase.h  LogUtil.h  RegistryUtil.h  SmartPtr.h  StrUtil.h  _BinaryPackerInternal.h
snippets/: BitmapWIC.cpp  bits.h
src/csv/: CSVReader.cpp
src/logutil/: LogUtil.cpp
src/strutil/: StrUtil.cpp
tests/: gtest_main.cpp  test_binpack.cpp  test_csv.cpp  test_events.cpp  test_registry.cpp  test_strutil.cpp
